Fix input border radius on iOS in static page

--- a/client/css/static.scss
+++ b/client/css/static.scss
@@ -55,3 +55,8 @@ button {
 button:hover:not([disabled]), button:focus {
   background-color: #3367D6;
 }
+
+
+textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
+  border-radius: 0;
+}
